test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/labelselector/cm-mutated.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: cm1
  labels:
    should-match: 'yes'
    foo: 'bar'
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: cm1
  labels:
    should-match: 'yes'
    foo: 'bar'
