test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/labelselector/secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: some-secret
