test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/labelselector/should-match.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: cm1
  labels:
    should-match: 'yes'
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: cm2
  labels:
    should-match: 'yes'
