test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/labelselector/should-not-match.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: cm3
  labels:
    should-match: 'no'
