test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/labelselector/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-existing-configmap
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
