test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/labelselector/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-fetching-resources-with-labelselectors
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: should-match.yaml
    - apply:
        file: should-not-match.yaml
    - apply:
        file: policy.yaml
    - assert:
        file: policy-assert.yaml
    - apply:
        file: secret.yaml
    - assert:
        file: cm-mutated.yaml
    - assert:
        file: should-not-match.yaml
